--- a/tab-frontend/src/App.css
+++ b/tab-frontend/src/App.css
@@ -1,42 +1,254 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+#root{
+  --black-12: #121212;
+  width: 100vw;
+  height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+body{
+  overflow-x: hidden;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  width: 100vw;
+  height: max-content;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.gradient-background-wrapper {
+  position: absolute;
+
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.gradient-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #ff6347 0%, #ffd700 100%); /* Default gradient */
+  opacity: 1;
+  transition: 1s ease; /* Hardcoded transition */
+}
+
+.new-gradient {
+  opacity: 0;
+  transition: 1s ease; /* Hardcoded transition */
+}
+
+.icon{
+  font-size: 80px;
+}
+.controls{
+  position: absolute;
+  background-color: #2f2f2f;
+  top: 0px;
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 2px solid white;
+
+  gap: 50px;
+}
+.controls .sort{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.controls .sort .icon{
+  font-size: 30px;
+  border-radius: 10%;
+  transition: 0.5s;
+}
+.controls .sort .icon.selected{
+  background-color: white;
+  color: black;
+
+}
+.statistics-container{
+  display: flex;
+  flex-direction: column;
+
+  width: 200px;
+  margin-top: 100px;
+  padding: 20px;
+  height: max-content;
+  min-height: 100vh;
+
+}
+
+.statistics-container.grid{
+  width: 30vw;
+  flex-direction: row;
+  overflow: hidden;
+}
+.stat{
+  cursor: pointer;
+
+  width: fit-content;
+  height: fit-content;
+  transition: 0.5s ease-in-out;
+}
+.stat:hover .cube{
+  animation-play-state: running;
+}
+.stat:hover .content div{
+  animation-play-state: running;
+}
+.stat.sorted .cube{
+  animation: none;
+}
+.stat.sorted .content{
+  display: none;
+}
+
+.stat.grid{
+  width: 100px;
+  height: 100px;
+}
+.stat.grid .cube{
+  width: 100px;
+  height: 100px;
+  animation: none;
+}
+.stat.grid .face{
+  width: 100px;
+  height: 100px;
+}
+.stat.grid .game-icon{
+  width: 64px;
+  height: 64px;
+}
+.stat .cube{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  transform-style: preserve-3d;
+  animation: stat-rotate 5s linear infinite;
+  animation-play-state: paused;
+}
+
+.stat .game-icon{
+  width: 128px;
+  height: 128px;
+}
+.stat .content{
+  position: absolute;
+  top: 0px;
+  left: 210px;
+  width: 400px;
+  height: 200px;
+}
+
+.content div {
+  position: absolute;
+  opacity: 0;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-play-state: paused;
+}
+
+.content div:nth-child(1) {
+  animation-name: fadeInOut;
+  animation-delay: 0s;
+}
+
+.content div:nth-child(2) {
+  animation-name: fadeInOut;
+  animation-delay: 1.25s;
+}
+
+.content div:nth-child(3) {
+  animation-name: fadeInOut;
+  animation-delay: 2.5s;
+}
+
+.content div:nth-child(4) {
+  animation-name: fadeInOut;
+  animation-delay: 3.75s;
+}
+
+.face {
+  width: 200px;
+  height: 200px;
+  background: #2f2f2f;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  font-size: 2rem;
+  transition: 0.5s;
+  border-radius: 10px;
+
+  overflow: hidden;
+}
+.front {
+  transform: translateZ(100px);
+}
+.back {
+  transform: translateZ(-100px) rotateY(180deg);
+}
+.left {
+  transform: translateX(-100px) rotateY(-90deg);
+}
+.right {
+  transform: translateX(100px) rotateY(90deg);
+}
+.top {
+  transform: translateY(-100px) rotateX(90deg);
+}
+.bottom {
+  transform: translateY(100px) rotateX(-90deg);
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes stat-rotate {
+  0%{
+    transform: rotateY(0deg);
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  20%{
+    transform: rotateY(0deg);
+  }
+  25%{
+    transform: rotateY(-90deg);
+  }
+  45%{
+    transform: rotateY(-90deg);
+  }
+  50%{
+    transform: rotateY(-180deg);
+  }
+  70%{
+    transform: rotateY(-180deg);
+  }
+  75%{
+    transform: rotateY(-270deg);
+  }
+  95%{
+    transform: rotateY(-270deg);
+  }
+  100%{
+    transform: rotateY(-360deg);
+  }
 }
